tests/resources/invalid/type/control_flow/for_non_iterable.mamba
for i in 10:
    print i
